# appctl

./: Makefile.am  appctl  configure.ac
po/: POTFILES.in
shell-completion/: Makefile.am  appctl
src/: Makefile.am  appctl.c
